src/components/GameCard/GameCard.css
.game-card {
  width: 285px;
  height: 160px;
  background: var(--white);
  border: 3px solid var(--black);
  box-shadow: 0px 10px 0px var(--black);
  border-radius: 20px;
  color: var(--black);
  display: grid;
  gap: 4px;
  place-items: center;
  place-content: center;
}

.game-card__label,
.game-card__text {
  font-weight: 700;
  text-transform: uppercase;
}

.game-card__label {
  font-size: var(--font-size-heading-xs);
  line-height: var(--line-height-heading-xs);
}
.game-card__text {
  font-size: var(--font-size-heading-l);
  line-height: var(--line-height-heading-l);
}

